responsive layout: ensure menu is/stays visible, fixes #5917
git-svn-id: svn://develop.studip.de/studip/trunk@35020 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -164,8 +164,9 @@ label[for="responsive-toggle"] {
 
     #barBottomContainer {
         .box-sizing(border-box);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.7);
         height: @header-bar-container-height;
+        position: fixed;
+        top: 0;
     }
 
     #barBottomright, #barBottomright ul {
