--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -7070,8 +7070,9 @@ label[for="responsive-toggle"]:before {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.7);
     height: 35px;
+    position: fixed;
+    top: 0;
   }
   #barBottomright,
   #barBottomright ul {
